# libimp

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  ROADMAP.md  config.in
include/imp/: version
include/imp/common/: image  iterator  matrix  operator  rgb_image  traits
include/imp/filter/: minmax
include/imp/image/: image  operator  rgb_image
include/imp/io/: pgm  ppm
src/: version.cpp
src/include/imp/internal/: read_word  stream_tools
src/include/imp/internal/eigen/: matrix_plugin  matrixbase_plugin
src/include/internal/: matrix_plugin.hpp
test/: CMakeLists.txt
test/common/: matrix.cpp  matrix_operator.cpp  rgb_image.cpp  traits.cpp
test/filter/: minmax.cpp
test/image/: rgb_image.cpp
test/io/: pgm.cpp  ppm.cpp
